force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/BMCServiceDesk__UserPreferences__c.object-meta.xml
<CustomObject>
    <description>Stores user&apos;s Remedyforce console customization  preferences.</description>
    <label>User Preference</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>