force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__BroadcastViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BroadcastViewPreferences__c</fullName>
    <description>It stores column preferences of user for console Broadcast Listview.</description>
    <label>BroadcastViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>