force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ChangeRequestViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ChangeRequestViewPreferences__c</fullName>
    <description>It stores column preferences of user for console Change Request Listview.</description>
    <label>ChangeRequestViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>