force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ConsolePreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ConsolePreferences__c</fullName>
    <description>Stores user preferences applicable to Remedyforce Console</description>
    <label>Console Preferences</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>