force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__IncidentViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IncidentViewPreferences__c</fullName>
    <description>It stores column preferences of user for console  Incident Listview.</description>
    <label>IncidentViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>