force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ListViewLoadPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ListViewLoadPreferences__c</fullName>
    <description>It stores sorting and filter preferences of user for console Listview.</description>
    <label>ListViewLoadPreferences</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>