force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__MetricBarPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MetricBarPreferences__c</fullName>
    <description>It stores selected metric cards ids.</description>
    <label>Metric Bar Preferences</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>