force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ProblemViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProblemViewPreferences__c</fullName>
    <description>It stores column preferences of user for console Problem Listview.</description>
    <label>ProblemViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>