force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ReleaseViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ReleaseViewPreferences__c</fullName>
    <description>It stores column preferences of user for console Release Listview.</description>
    <label>ReleaseViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>