force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ServiceOutageViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ServiceOutageViewPreferences__c</fullName>
    <description>It stores column preferences of user for console Service Outage Listview.</description>
    <label>ServiceOutageViewPreferences</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>