force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ServiceRequestViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ServiceRequestViewPreferences__c</fullName>
    <description>It stores column preferences of user for console Service Request Listview.</description>
    <label>ServiceRequestViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>