force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__ShowMetricBar__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ShowMetricBar__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Metric Bar</label>
    <type>Checkbox</type>
</CustomField>