force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__TaskViewPreferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TaskViewPreferences__c</fullName>
    <description>It stores column preferences of user  for  console task Listview.</description>
    <label>TaskViewPreferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>