force-app/main/default/objects/BMCServiceDesk__UserPreferences__c/fields/BMCServiceDesk__User__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to refer link between user and user&apos;s console column customization preferences.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserPreferences</relationshipName>
    <type>Lookup</type>
</CustomField>